# bipp_urdf

install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/V1_Robot_Mobil_description/share/V1_Robot_Mobil_description/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/V1_Robot_Mobil_description/share/V1_Robot_Mobil_description/cmake/: V1_Robot_Mobil_descriptionConfig.cmake
install/V1_Robot_Mobil_description/share/V1_Robot_Mobil_description/launch/: display.launch.xml
install/V1_Robot_Mobil_description/share/V1_Robot_Mobil_description/meshes/: Batterie_v3_1.stl  Bille_v1_1.stl  Bille_v1__2__1.stl  Camera_stereo_v3_1.stl  (+33 more)
install/my_robot_bringup/share/my_robot_bringup/: local_setup.sh  package.sh  package.xml
install/my_robot_description/share/my_robot_description/: package.sh
log/: latest_build  latest_list
src/V1_Robot_Mobil_description/: CMakeLists.txt
src/V1_Robot_Mobil_description/meshes/: SG90_V1_v1__2__1.stl  base_camera_niv1_v1_1.stl  base_camera_niv3_1_v2__1__1.stl  entretoise_roue_folle_v1__1__1.stl  gente_gauche_1.stl  illustation_entretoise_12mm_v2_1.stl  illustation_entretoise_12mm_v2__10__1.stl  illustation_entretoise_12mm_v2__12__1.stl  illustation_entretoise_12mm_v2__8__1.stl  illustation_entretoise_26mm_v4__2__1.stl  illustation_entretoise_3_v2__1__1.stl  illustation_entretoise_70mm_v1__2__1.stl  support_roue_1.stl  support_roue_2.stl  volume_jeston_v2_1.stl
src/V1_Robot_Mobil_description/urdf/: V1_Robot_Mobil.trans  materials.xacro
src/my_robot_bringup/: CMakeLists.txt
(+26 files in other folders)
